<resources>
    <string name="app_name">albumtrackr</string>
    <string name="call_button_text">Call Service</string>
    <string name="button_delete">Delete Album</string>
    <string name="artist">Artist</string>
    <string name="album_name">Album Name</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_album_lists">My Album lists</string>
    <string name="popular_album_lists">Popular Album Lists</string>
    <string name="album_list">Album List:</string>
    <string name="albumlist_desc">Description:</string>
    <string name="edit_artist">Artist Name</string>
    <string name="edit_name">Album Name</string>
    <string name="add_album_title">Add Album</string>
    <string name="imp_dialog_listener">must implement DialogListener</string>
    <string name="cancel">Cancel</string>
    <string name="my_lists">My Album Lists</string>
    <string name="pop_lists">Popular Album Lists</string>
    <string name="new_lists">Newest Album Lists</string>
    <string name="add_list">Add Album List</string>
    <string name="list_name">List Name</string>
    <string name="list_desc">Description</string>
    <string name="edit_desc">Edit List Description</string>
    <string name="stars">"Stars: "</string>
    <string name="fail_get_data">Failed to get the data...</string>
    <string name="list_delete">List deleted!</string>
    <string name="list_delete_fail">Unable to delete list!</string>
    <string name="album_added">Album added!</string>
    <string name="album_add_fail">Unable to add album. Not found in Last.fm database.</string>
    <string name="desc_update">Description updated!</string>
    <string name="desc_update_fail">Unable to update description!</string>
    <string name="list_starred">List starred!</string>
    <string name="list_star_fail">Unable to star list!</string>
    <string name="album_delete">Album deleted!</string>
    <string name="album_delete_fail">Unable to delete album!</string>
    <string name="no_lists_found">No lists were found by you.</string>


</resources>